# fuego-desktop

./: .gitignore  .gitmodules  AUTO_STARK_IMPLEMENTATION_SUMMARY.md  AUTO_STARK_UI_INTEGRATION_SUMMARY.md  Anchor.toml  CMakeCache.txt  CMakeLists.txt  COLD_L3_Node_Development_Outline.md  Cargo.toml  CryptoNoteWallet.cmake  FUEGO_DESKTOP_INTEGRATION_SUMMARY.md  Fuego-GUI-minimal.pro  Fuego-GUI-simple.pro  Fuego-GUI.pro  GITHUB_ACTIONS_FIXES_SUMMARY.md  LICENSE  MainWindow.cpp  NodeAdapter.moc  PR_DESCRIPTION.md  QREncode.cmake  README.md  RELEASE.md  REPO_CLEANUP_SUMMARY.md  SEPARATED_WORKFLOWS_SUMMARY.md  STARK_CLI_BUILD_INTEGRATION_SUMMARY.md  STARK_CLI_INTEGRATION_GUIDE.md  STARK_CLI_INTEGRATION_OPTIMIZATION.md  STARK_CLI_INTEGRATION_SUMMARY.md  STARK_INTEGRATION_GUIDE.md  UI_INTEGRATION_GUIDE.md  cryptonote-fix.patch  download-stark-cli.sh  fix_compilation_errors.patch  hardhat.config.js  monitor_builds.sh  package.json  rollup-config.toml  tsconfig.json  ui_addressbookdialog.h  ui_changepassworddialog.h  (+19 more)
.github/workflows/: build-macos.yml  build-with-stark.yml  build.yml  build.yml.disabled  check.yml  checktest.yml  ci.yml  macOS-apple-silicon.yml  macOS-intel.yml  macOS.yml  macos-apple-silicon-only.yml  macos-wallet-only.yml  release.yml  ubuntu22.yml  ubuntu24.yml  windows.yml
crates/block-sync/: Cargo.toml
crates/block-sync/src/: error.rs  ffi.rs  lib.rs  validation.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: arbitrum.rs  error.rs  fuego.rs  lib.rs  relayer.rs
crates/chain/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/commitments/: Cargo.toml  lib.rs
crates/commitments/src/: error.rs  heat.rs  lib.rs  yield_commitment.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: error.rs  ffi.rs  hotstuff.rs  lib.rs  pow_mining.rs
crates/encryption/: Cargo.toml  lib.rs
crates/encryption/src/: aegis.rs  error.rs  lib.rs  wallet.rs
crates/net-p2p/: Cargo.toml
crates/net-p2p/src/: lib.rs
crates/node/: Cargo.toml  main.rs
crates/node/src/: lib.rs  main.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  lib.rs
crates/state-db/: Cargo.toml  lib.rs
crates/state-db/src/: error.rs  lib.rs  merkle.rs
crates/txpool/: Cargo.toml  lib.rs
crates/txpool/src/: error.rs  fee.rs  lib.rs  priority.rs
data/state/: IDENTITY  LOG  LOG.old.1754876464356381  LOG.old.1754878185731643
docs/: AUXPOW-MERGE-MINING-EXPLAINED.md  CNUPX2-REVISED-ANALYSIS.md  COLD-L3-COMPREHENSIVE-MEMORY.md  COLD_L3_ARCHITECTURE_OVERVIEW.md  DEPLOYMENT.md  FUEGO-FRESH-ANALYSIS.md  PRE-LAUNCH-HEAT-MINTING-STRATEGY.md  STANDALONE-ZK-HEAT-MINTING.md  STEALTH-ADDRESS-L3-ARCHITECTURE.md  STEALTH-ADDRESS-TECHNICAL-SPEC.md  TXN-EXTRA-PROOF-SYSTEM.md  USER-EXPERIENCE-ARCHITECTURE.md  Winterfell_Verifier_Roadmap.md  XFG-HEAT-VALIDATION-SUMMARY.md
fuego-desktop.app/Contents/: Info.plist
fuego-forecast-dapp/docs/: README-FuegoForecast.md
fuego-forecast-dapp/frontend/: fallout-terminal-ui.html  pipboy-terminal.html  skyrim-forecast-ui.html
ignition/modules/: DeployFuegoForecast.js  DeployFuegoForecastWithMocks.js  deploy.js
libqrencode/: qrencode.c
rollup/: README.md  start.sh
rollup/config/: app.toml  config.toml
rollup/data/data/blockstore.db/: LOG
rollup/data/data/state.db/: LOG
scripts/: auto_fix_builds.py  auto_stark_proof.sh  build-fuego-index-fresh.js  build-fuego-index.js  deploy-cold-burn-verifier.js  deploy-cold-inverse.js  deploy-erigon-node.sh  deploy-fuego-forecast.ts  deploy-heat-arbitrum.js  deploy-heat-commitment-verifier.js  deploy-heat-mainnet.js  deploy-heat-production.js  deploy-inverse-xfg-token.js  deploy-l3-contracts.js  deploy-o-token.js  deploy-one-time-heat-system.js  deploy-stealth-heat-system.js  deploy-testnet.ts  deploy-to-arbitrum-sepolia.js  deploy-tokens.js  fund-celestia.js  implement-cnupx2-mm.js  init-rollup.js  search-fuego-fresh.js  search-fuego.js  setup-testnet-fixed.js  setup-testnet.js  standalone-zk-heat-minter.js  stark_proof_generator.py  start-cnupx2-test.sh  start-cold-l3-privacy.js  start-cold-l3-simplified.js  start-cold-l3-tendermint.js  start-cold-l3.js  start-real-auxpow-test.sh  start-rollup.js  test-anomaly-detection.js  test-burn-mint-flow.js  test-heat-only.js  test-merge-mining-cnupx2.js  (+6 more)
src/: AliasProvider.cpp  CryptoNoteWrapper.cpp  LoggerAdapter.cpp  NodeAdapter.cpp  ProofGenerationWorker.cpp  ProofGenerationWorker.h  Settings.cpp  StarkProofService.cpp  StarkProofService.h  WalletAdapter.cpp  WinterfellFfiStub.cpp  fallout-terminal-ui.html  fuego-api-service.js  main.cpp
src/gui/: DepositModel.h  SplashScreen.cpp
src/gui/ui/: overviewframe.ui
src/merge-mining/: fuego-merge-miner.js
src/privacy/: privacy-client.js
src/verifier/: Cargo.toml
src/verifier/src/: error.rs  lib.rs  verifier_core.rs
temp_backup/: COLDL3LiquidityRewards.sol  COLDLiquidityMining.sol  COLDPrivacyEngine.sol  FuegoChainOracleV2.sol  HeatTokenL3.sol
temp_contracts/: COLDAMMInverse.sol  COLDInverseProtocol.sol  COLDL3Protocol.sol  COLDL3Settlement.sol  COLDL3Token.sol  COLDL3XFGPrivacyMinter.sol  COLDLiquidityRewards.sol  COLDOToken.sol  COLDToken.sol  CelestiaVerifierMock.sol  FuegoChainOracleV2Simple.sol  HEATToken.sol  InverseXFGToken.sol  MockFuegoOracle.sol  MockXFGBurnVerifier.sol  embertoken.sol
test/: COLDBurnVerifier.js
tests/: FuegoForecast.ts  cold-protocol.ts  fuego-forecast.ts
tools/: fuego-index-config.yaml
tools/celestia-client/: package.json  tsconfig.json
tools/celestia-client/src/: CelestiaManager.ts  test-celestia-basic.ts
tools/elder-node-api/: package.json  server.js
tools/prove-burn/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md
tools/prove-burn/docs/: architecture.html
tools/prove-burn/src/: circuit.rs  main.rs
winterfell-xfg-proof/: Cargo.toml  MEMORY.md  README.md
winterfell-xfg-proof/examples/: burn_proof_example.rs  generate_proof.rs
winterfell-xfg-proof/src/: circuit.rs  lib.rs  prover.rs  verifier.rs
winterfell-xfg-proof/tests/: integration_tests.rs
