[package]
name = "bridge"
version = "0.1.0"
edition = "2018"

[dependencies]
# Add any dependencies here

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    "chain",
    "cli",
    "commitments",
    "consensus",
    "encryption",
    "net-p2p",
    "rpc",
    "state-db",
    "txpool",
    "bridge",
    "coldl3-node"
]