[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
block-sync = { path = "../block-sync" }
consensus = { path = "../consensus" }
state-db = { path = "../state-db" }
commitments = { path = "../commitments" }

[lib]
crate-type = ["rlib"]

