[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
cxx = "1.0"
blake2 = "0.10"
block-sync = { path = "../block-sync" }
state-db = { path = "../state-db" }
txpool = { path = "../txpool" }
commitments = { path = "../commitments" }

[features]
default = ["mock-ffi"]
mock-ffi = []
ffi = []