[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
blake2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.71"

[lib]
name = "encryption"
path = "src/lib.rs"

[features]
default = ["mock-ffi"]
mock-ffi = []
ffi = []