[package]
name = "net-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "identify",
    "gossipsub",
    "mdns",
    "noise",
    "yamux",
    "tokio",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
futures-util = "0.3"
