[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
block-sync = { path = "../block-sync" }
cli = { path = "../cli" }
commitments = { path = "../commitments" }
consensus = { path = "../consensus" }
encryption = { path = "../encryption" }
net-p2p = { path = "../net-p2p" }
rpc = { path = "../rpc" }
state-db = { path = "../state-db" }
txpool = { path = "../txpool" }
bridge = { path = "../bridge" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "node"
path = "src/main.rs"