[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
block-sync = { path = "../block-sync" }
consensus = { path = "../consensus" }
state-db = { path = "../state-db" }
txpool = { path = "../txpool" }
commitments = { path = "../commitments" }
bridge = { path = "../bridge" }
encryption = { path = "../encryption" }
rpc = { path = "../rpc" }

[lib]
name = "node"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/main.rs"