[package]
name = "txpool"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.0"
priority-queue = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
block-sync = { path = "../block-sync" }