[package]
name = "plonk-verifier"
version = "0.1.0"
description = "PLONK proof verifier for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "plonk_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
# Note: Using Groth16 as ark-plonk is less mature for no_std
# We can switch to PLONK later when it's more stable
solana-program = "1.16" 