[package]
name = "prove-burn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove-burn"
path = "src/main.rs"

[dependencies]
winterfell = "0.8.3"
rand_core = { version = "0.6", features = ["getrandom"] }
# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic utilities
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"

# File I/O
tokio = { version = "1.0", features = ["full"] }

# Logging
env_logger = "0.10"
log = "0.4"

ethers = { version = "2.0", default-features = false, features = ["abi", "keccak"] }

[dev-dependencies]
tempfile = "3.0" 